--- a/task_end.html
+++ b/task_end.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>评估结果</title>
-    <h1>！！！一定要必须下载csv文件！！！</h1>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,22 +52,27 @@
 <body>
     <div class="container">
         <h1>评估结果</h1>
-        <table id="resultsTable">
-            <thead>
-                <tr>
-                    <th>图片名称</th>
-                    <th>美观评分</th>
-                    <th>喜爱评分</th>
-                    <th>支付意愿评分</th>
-                    <th>评估难易程度</th>
-                    <th>用户名</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- 数据行将由 JavaScript 动态生成 -->
-            </tbody>
-        </table>
-        <button id="downloadCsvButton">下载 CSV</button>
+        <form id="csvForm" action="/thanks.html" method="POST" data-netlify="true">
+            <input type="hidden" name="form-name" value="csv-upload">
+            <textarea id="csvData" name="csvContent" class="hidden" style="display:none;"></textarea>
+            <table id="resultsTable">
+                <thead>
+                    <tr>
+                        <th>图片名称</th>
+                        <th>美观评分</th>
+                        <th>喜爱评分</th>
+                        <th>支付意愿评分</th>
+                        <th>评估难易程度</th>
+                        <th>用户名</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- 数据行将由 JavaScript 动态生成 -->
+                </tbody>
+            </table>
+            <button id="downloadCsvButton" type="button">下载 CSV</button>
+            <button type="submit">提交到 Netlify</button>
+        </form>
     </div>
 
     <script>
@@ -93,8 +97,8 @@
                 row.insertCell(5).innerText = username;
             });
 
-            // 生成并下载 CSV 文件
-            document.getElementById('downloadCsvButton').addEventListener('click', function() {
+            // 生成 CSV 数据
+            const generateCsvContent = () => {
                 const csvContent = tableData.map(data => [
                     data.image,
                     data.question1,
@@ -103,9 +107,14 @@
                     data.question4,
                     username
                 ].join(',')).join('\n');
-
                 const csvHeader = '图片名称,美观评分,喜爱评分,支付意愿评分,评估难易程度,用户名\n';
-                const csvFile = new Blob([csvHeader + csvContent], { type: 'text/csv' });
+                return csvHeader + csvContent;
+            };
+
+            // 下载 CSV 文件
+            document.getElementById('downloadCsvButton').addEventListener('click', function() {
+                const csvContent = generateCsvContent();
+                const csvFile = new Blob([csvContent], { type: 'text/csv' });
                 const downloadLink = document.createElement('a');
                 const sanitizedUsername = username.replace(/[^a-zA-Z0-9]/g, '_'); // 移除特殊字符
                 const fileName = `${sanitizedUsername || '匿名用户'}.csv`;
@@ -117,8 +126,14 @@
                 downloadLink.click();
                 document.body.removeChild(downloadLink);
             });
+
+            // 在表单中填充 CSV 数据
+            const csvForm = document.getElementById('csvForm');
+            csvForm.addEventListener('submit', function() {
+                const csvContent = generateCsvContent();
+                document.getElementById('csvData').value = csvContent;
+            });
         });
     </script>
 </body>
 </html>
-
