--- a/task_end.html
+++ b/task_end.html
@@ -8,41 +8,45 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin-top: 50px;
+            margin: 0;
+            padding: 0;
             background-color: #FCDFBF;
         }
         .container {
-            margin: 20px auto;
-            width: 800px;
-            padding: 20px;
+            margin: 10px auto;
+            padding: 15px;
             background-color: #ffffff;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 90%;
         }
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
+            font-size: 14px;
         }
         table, th, td {
             border: 1px solid black;
         }
         th, td {
-            padding: 10px;
+            padding: 8px;
             text-align: center;
         }
         button {
             background-color: #4CAF50;
             border: none;
             color: white;
-            padding: 10px 20px;
+            padding: 10px 15px;
             text-align: center;
             text-decoration: none;
             display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
+            font-size: 14px;
+            margin: 10px auto;
             cursor: pointer;
             border-radius: 5px;
+            width: 90%;
+            max-width: 300px;
         }
         button:hover {
             background-color: #45a049;
@@ -51,28 +55,23 @@
 </head>
 <body>
     <div class="container">
-        <h1>评估结果</h1>
-        <form id="csvForm" action="/thanks.html" method="POST" data-netlify="true">
-            <input type="hidden" name="form-name" value="csv-upload">
-            <textarea id="csvData" name="csvContent" class="hidden" style="display:none;"></textarea>
-            <table id="resultsTable">
-                <thead>
-                    <tr>
-                        <th>图片名称</th>
-                        <th>美观评分</th>
-                        <th>喜爱评分</th>
-                        <th>支付意愿评分</th>
-                        <th>评估难易程度</th>
-                        <th>用户名</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- 数据行将由 JavaScript 动态生成 -->
-                </tbody>
-            </table>
-            <button id="downloadCsvButton" type="button">下载 CSV</button>
-            <button type="submit">提交到 Netlify</button>
-        </form>
+        <h1>一定要点击下载表格图片，并在您的相册找到该图片</h1>
+        <table id="resultsTable">
+            <thead>
+                <tr>
+                    <th>图片名称</th>
+                    <th>美观评分</th>
+                    <th>喜爱评分</th>
+                    <th>支付意愿评分</th>
+                    <th>评估难易程度</th>
+                    <th>用户名</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- 数据行将由 JavaScript 动态生成 -->
+            </tbody>
+        </table>
+        <button id="downloadImageButton">下载表格图片</button>
     </div>
 
     <script>
@@ -97,43 +96,23 @@
                 row.insertCell(5).innerText = username;
             });
 
-            // 生成 CSV 数据
-            const generateCsvContent = () => {
-                const csvContent = tableData.map(data => [
-                    data.image,
-                    data.question1,
-                    data.question2,
-                    data.question3,
-                    data.question4,
-                    username
-                ].join(',')).join('\n');
-                const csvHeader = '图片名称,美观评分,喜爱评分,支付意愿评分,评估难易程度,用户名\n';
-                return csvHeader + csvContent;
-            };
+            // 生成并下载表格图片
+            document.getElementById('downloadImageButton').addEventListener('click', function() {
+                const tableElement = document.getElementById('resultsTable');
 
-            // 下载 CSV 文件
-            document.getElementById('downloadCsvButton').addEventListener('click', function() {
-                const csvContent = generateCsvContent();
-                const csvFile = new Blob([csvContent], { type: 'text/csv' });
-                const downloadLink = document.createElement('a');
-                const sanitizedUsername = username.replace(/[^a-zA-Z0-9]/g, '_'); // 移除特殊字符
-                const fileName = `${sanitizedUsername || '匿名用户'}.csv`;
+                // 使用 HTML2Canvas 库渲染表格
+                html2canvas(tableElement).then(canvas => {
+                    const imageLink = document.createElement('a');
+                    imageLink.href = canvas.toDataURL('image/png');
+                    imageLink.download = '表格结果.png';
 
-                downloadLink.href = URL.createObjectURL(csvFile);
-                downloadLink.download = fileName;
-
-                document.body.appendChild(downloadLink);
-                downloadLink.click();
-                document.body.removeChild(downloadLink);
-            });
-
-            // 在表单中填充 CSV 数据
-            const csvForm = document.getElementById('csvForm');
-            csvForm.addEventListener('submit', function() {
-                const csvContent = generateCsvContent();
-                document.getElementById('csvData').value = csvContent;
+                    document.body.appendChild(imageLink);
+                    imageLink.click();
+                    document.body.removeChild(imageLink);
+                });
             });
         });
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
