--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
         }
         .container {
             background-color: #FFFFFF;
-            padding: 20px 20px;
+            padding: 15px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 1240px;
-            height: 400px;
-            margin-top: 20px;
+            width: 90%;
+            max-width: 400px;
         }
         .container h1 {
-            margin-bottom: 10px;
-            font-size: 24px;
+            margin-bottom: 15px;
+            font-size: 20px;
             color: #333333;
         }
         .container label {
@@ -37,14 +36,16 @@
             color: #555555;
         }
         .container input {
-            width: 200px;
+            width: 90%;
+            max-width: 300px;
             padding: 10px;
             margin-bottom: 20px;
             border: 1px solid #CCCCCC;
             border-radius: 4px;
         }
         .container button {
-            width: 100px;
+            width: 90%;
+            max-width: 150px;
             padding: 10px;
             background-color: #007BFF;
             border: none;
@@ -57,14 +58,14 @@
             background-color: #0056b3;
         }
         .container p {
-            font-size: 14px;
+            font-size: 12px;
             color: #666666;
-            line-height: 1.6;
+            line-height: 1.4;
         }
         #top-image {
             width: 100%;
             height: auto;
-            border-radius: 2px;
+            margin-bottom: 20px;
         }
     </style>
 </head>
